--- a/tuong_clinic/templates/records/demographics.html
+++ b/tuong_clinic/templates/records/demographics.html
@@ -1,4 +1,4 @@
-[[item.hospital_number]]<br />
+<span>MS: <code>[[item.hospital_number]]</code></span><br />
 [[item.name]]<br />
 <span ng-show="item.date_of_birth">
   [[item.date_of_birth | shortDate]] ([[ item.date_of_birth | age ]])<br />
