--- a/tuong_clinic/templates/detail/default.html
+++ b/tuong_clinic/templates/detail/default.html
@@ -2,11 +2,8 @@
 {% load panels %}
 
 {% block left_column %}
-<!-- {% include 'detail/_demographics_location_panels.html' %} -->
-  {% record_panel models.Allergies %}
-  {% record_panel models.PastMedicalHistory %}
+  {% record_panel models.Notes %}
 {% endblock %}
 {% block right_column %}
-  {% record_panel models.Diagnosis %}
-  {% record_panel models.Treatment %}
+  {% record_panel models.Allergies %}
 {% endblock %}
