--- a/tuong_clinic/templates/detail/inpatient.html
+++ b/tuong_clinic/templates/detail/inpatient.html
@@ -30,10 +30,9 @@
     </div>
   </div>
 </div>
-<div class="col-md-6"> <!-- Detail panels col 1 -->
-  {% record_panel models.Allergies noentries="No known allergies"%}
+<div class="col-md-7"> <!-- Detail panels col 1 -->
+  {% record_panel models.Notes %}
 </div>                 <!-- Ends Detail panels col 1 -->
-<div class="col-md-6"> <!-- Detail panels col 2 -->
-  {% record_panel models.Diagnosis %}
-  {% record_panel models.Treatment %}
+<div class="col-md-5"> <!-- Detail panels col 2 -->
+  {% record_panel models.Allergies %}
 </div>                 <!-- Ends Detail panels col 2 -->
