--- a/tuong_clinic/templates/patient_lists/spreadsheet_list.html
+++ b/tuong_clinic/templates/patient_lists/spreadsheet_list.html
@@ -71,7 +71,7 @@
     </h4>
   </div>
   <div class="panel-body">
-	  <input class="form-control" ng-model="query.name" ui-event="{focus: 'focusOnQuery()', blur: 'blurOnQuery()'}"
+	  <input class="form-control" ng-model="query.simple" ui-event="{focus: 'focusOnQuery()', blur: 'blurOnQuery()'}"
              type="text" class="input-small" placeholder="Tên">
   </div>
 </div>
