--- a/tuong_clinic/templates/patient_lists/spreadsheet_list.html
+++ b/tuong_clinic/templates/patient_lists/spreadsheet_list.html
@@ -187,6 +187,16 @@
   <a class="pointer screen-only" ng-click="keyboard_shortcuts($event)">
     <i class="fa fa-keyboard-o"></i> Phím tắt
   </a>
+  <span style="padding: .5em">|</span>
+  <a class="pointer screen-only"
+     href="https://trello.com/b/mUM9K82F/saomai"
+     target="_blank"
+     data-toggle="tooltip"
+     title="Có lỗi với sửa đổi tính năng gì thì mình theo dõi ở đây nghe chị">
+    <i class="fa fa-bug"></i> Track Lỗi
+  </a>
+  <!-- I gave up -->
+  <script> $('[data-toggle="tooltip"]').tooltip(); </script>
 </footer>
 
 
